--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,15 @@
 
 
     "require": {
-    "php": "^8.0.2",
-    "intervention/image": "^2.7",
-    "guzzlehttp/guzzle": "^7.2",
-    "laravel/framework": "^9.19",
-    "laravel/sanctum": "^3.0",
-    "laravel/tinker": "^2.7",
-    "laravel/ui": "^4.5"
-},
+        "php": "^8.0.2",
+        "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
+        "laravel/framework": "^9.19",
+        "laravel/sanctum": "^3.0",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.5",
+        "surfsidemedia/shoppingcart": "^1.0"
+    },
 
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
